Fixed issue with overlap in showcase 3

--- a/src/components/Showcase3/showcase.scss
+++ b/src/components/Showcase3/showcase.scss
@@ -23,8 +23,10 @@
     text-align: center;
     background: #131313;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
     border-radius: 6px;
-    position: relative;
+    align-items: center;
 
     .item-header {
       color: white;
@@ -43,13 +45,10 @@
       background: none;
       border: 2px solid #cf1d1d;
       margin-top: 2rem;
-      padding: 1rem 2.1rem;
+      padding: 1.2rem 2.2rem;
       font-size: 1.5rem;
       font-weight: bold;
       border-radius: 3px;
-      position: absolute;
-      bottom: 20px;
-      transform: translateX(-50%);
     }
   }
 }
